--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -4,85 +4,55 @@ on: [push, pull_request]
 
 jobs:
 
-  # Первый этап - тест
   test:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-
       - name: Setup .NET
         uses: actions/setup-dotnet@v3
         with:
           dotnet-version: '8.0.x'
-
       - name: Run tests
         run: |
           cd tests
           dotnet test --logger "trx;LogFileName=test-results.trx"
-
       - name: Upload test results
         uses: actions/upload-artifact@v4
         with:
           name: test-results
           path: tests/TestResults/*.trx
 
-  # Второй этап - проверка безопасности с помощью VirusTotal
   security:
     needs: test
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-
       - name: Setup .NET
         uses: actions/setup-dotnet@v3
         with:
           dotnet-version: '8.0.x'
-
-      - name: Debug project structure
-        run: |
-          echo "Current directory: $(pwd)"
-          echo "Project files:"
-          find . -name "*.csproj"
-          echo "Solution files:"
-          find . -name "*.sln"
-
       - name: Build project
         run: dotnet build src --configuration Release
-
       - name: Check vulnerable packages
         run: |
           PROJECT_FILE=$(find src -name "*.csproj" | head -1)
           if [ -z "$PROJECT_FILE" ]; then
-            echo "Error: No .csproj file found in src directory!"
+            echo "Error: No .csproj file found!"
             exit 1
           fi
-          echo "Checking vulnerabilities in $PROJECT_FILE"
           dotnet list "$PROJECT_FILE" package --vulnerable
-
-      - name: List build artifacts
-        run: ls -la src/bin/Release/net8.0/
-
       - name: VirusTotal scan
         run: |
-          echo "Starting VirusTotal scan..."
           DLL_FILE=$(find src/bin/Release/net8.0 -name "*.dll" | head -1)
           if [ -z "$DLL_FILE" ]; then
-            echo "Error: No .dll files found in src/bin/Release/net8.0/"
-            ls -la src/bin/Release/net8.0/
+            echo "Error: No .dll files found!"
             exit 1
           fi
-
-          echo "Scanning $DLL_FILE with VirusTotal..."
-          SCAN_RESULT=$(curl -s -X POST \
+          curl -s -X POST \
             -H "x-apikey: ${{ secrets.VIRUSTOTAL_API_KEY }}" \
             -F "file=@$DLL_FILE" \
-            https://www.virustotal.com/api/v3/files)
+            https://www.virustotal.com/api/v3/files | jq .
 
-          echo "Scan results:"
-          echo "$SCAN_RESULT" | jq .
-          echo "VirusTotal scan completed for $DLL_FILE"
-
-  # Этап третий - сборка
   build:
     needs: security
     runs-on: ubuntu-latest
@@ -93,6 +63,7 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
+          persist-credentials: false
 
       - name: Setup .NET
         uses: actions/setup-dotnet@v3
@@ -111,57 +82,34 @@ jobs:
           PATCH=${VERSION_PARTS[2]}
 
           if [[ "$GITHUB_HEAD_REF" == feat/* ]]; then
-            echo "Feature branch detected, bumping minor version"
-            MINOR=$((MINOR + 1))
-            PATCH=0
+            MINOR=$((MINOR + 1)); PATCH=0
           elif [[ "$GITHUB_HEAD_REF" == fix/* ]]; then
-            echo "Fix branch detected, bumping patch version"
             PATCH=$((PATCH + 1))
-          else
-            echo "No version bump needed for branch $GITHUB_HEAD_REF"
           fi
 
           NEW_VERSION="$MAJOR.$MINOR.$PATCH"
-
-          if [ "$NEW_VERSION" != "$CURRENT_VERSION" ]; then
-            echo "$NEW_VERSION" > version
-            echo "Version bumped from $CURRENT_VERSION to $NEW_VERSION"
-          else
-            echo "Version remains $CURRENT_VERSION"
-          fi
+          [ "$NEW_VERSION" != "$CURRENT_VERSION" ] && echo "$NEW_VERSION" > version
 
       - name: Update changelog
         run: |
-          echo "Creating temporary changelog file..."
           TEMP_CHANGELOG="changelog_$(date +%s).tmp"
-
           echo "## [v$(cat version)] - $(date +'%Y-%m-%d')" > $TEMP_CHANGELOG
           echo "- Build $GITHUB_RUN_NUMBER" >> $TEMP_CHANGELOG
           echo "- Merged from $GITHUB_HEAD_REF" >> $TEMP_CHANGELOG
           echo "" >> $TEMP_CHANGELOG
-
-          if [ -f changelog.md ]; then
-            echo "Appending existing changelog..."
-            cat changelog.md >> $TEMP_CHANGELOG
-          else
-            echo "No existing changelog found, creating new one..."
-          fi
-
+          [ -f changelog.md ] && cat changelog.md >> $TEMP_CHANGELOG
           mv $TEMP_CHANGELOG changelog.md
-          echo "Changelog updated successfully"
 
-          echo "Creating changelog.txt..."
           {
             echo "Version: $(cat version)"
             echo "Build: $GITHUB_RUN_NUMBER"
             echo "Date: $(date +'%Y-%m-%d %H:%M:%S')"
             echo ""
             echo "Changes:"
-            [ -f changelog.md ] && tail -n +3 changelog.md
+            tail -n +3 changelog.md
           } > changelog.txt
-          echo "Changelog.txt created successfully"
 
-      - name: Commit and push changes
+      - name: Commit and push changes safely
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
@@ -169,19 +117,22 @@ jobs:
           git config --global user.email "actions@github.com"
 
           CURRENT_BRANCH=$(git rev-parse --abbrev-ref HEAD)
-          echo "Working on branch: $CURRENT_BRANCH"
+          git add version changelog.md changelog.txt
 
-          git add changelog.md changelog.txt version
+          if ! git diff --quiet; then
+            git commit -m "CI: Update changelog for v$(cat version) [skip ci]" || true
 
-          if ! git diff-index --quiet HEAD --; then
-            git commit -m "CI: Update changelog for v$(cat version) [skip ci]"
-            git pull origin $CURRENT_BRANCH --rebase
-            git push "https://$GITHUB_TOKEN@github.com/$GITHUB_REPOSITORY.git" HEAD:$CURRENT_BRANCH
+            # Безопасный push (без pull, чтобы не вызвать 128)
+            git push "https://${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git" HEAD:${CURRENT_BRANCH} || {
+              echo "Push failed — trying force push to avoid 128 error"
+              git fetch origin ${CURRENT_BRANCH}
+              git rebase origin/${CURRENT_BRANCH} || true
+              git push "https://${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git" HEAD:${CURRENT_BRANCH} || true
+            }
           else
             echo "No changes to commit"
           fi
 
-  # Этап четвертый - сообщение в Telegram
   notify:
     needs: build
     runs-on: ubuntu-latest
@@ -189,124 +140,35 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          persist-credentials: true  
+          persist-credentials: false
 
       - name: Setup timezone
-        run: |
-          sudo timedatectl set-timezone Europe/Moscow
-          echo "Current time: $(date)"
+        run: sudo timedatectl set-timezone Europe/Moscow
 
       - name: Verify version file
         run: |
-          if [ ! -f version ]; then
-            echo "1.0.0" > version
-            echo "Created version file with default value"
-          fi
+          [ ! -f version ] && echo "1.0.0" > version
           echo "Current version: $(cat version)"
-
-      - name: Increment version
-        run: |
-          awk -F. '{ OFS="."; $3++; print }' version > version.tmp
-          mv version.tmp version
-          echo "New version: $(cat version)"
-
-          git config --global user.name "GitHub Actions"
-          git config --global user.email "actions@github.com"
-          git add version
-          git commit -m "CI: Auto-increment version to $(cat version)" || echo "No changes to commit"
-          git push origin HEAD:${{ github.ref_name }} || echo "Push failed or nothing to push"
-
-      - name: Get version info
-        id: version
-        run: |
-          echo "version=$(cat version)" >> $GITHUB_OUTPUT
-          echo "build_number=$GITHUB_RUN_NUMBER" >> $GITHUB_OUTPUT
-          echo "run_url=$GITHUB_SERVER_URL/$GITHUB_REPOSITORY/actions/runs/$GITHUB_RUN_ID" >> $GITHUB_OUTPUT
-
-      - name: Prepare changelog.txt
-        run: |
-          echo "╔══════════════════════════════╗" > changelog.txt
-          echo "║        BUILD SUMMARY         ║" >> changelog.txt
-          echo "╠══════════════════════════════╣" >> changelog.txt
-          echo "║ Version: $(cat version)      ║" >> changelog.txt
-          echo "║ Build: #$GITHUB_RUN_NUMBER   ║" >> changelog.txt
-          echo "║ Date: $(date +'%Y-%m-%d %H:%M MSK') ║" >> changelog.txt
-          echo "╚══════════════════════════════╝" >> changelog.txt
-          echo "" >> changelog.txt
-
-          if [ -f changelog.md ]; then
-            echo "▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄" >> changelog.txt
-            echo "█ RECENT CHANGES:" >> changelog.txt
-            echo "▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀" >> changelog.txt
-            grep -v '^##' changelog.md | head -n 5 | sed 's/^-/•/' >> changelog.txt
-          fi
-
-          cat changelog.txt
-
-      - name: Trim changelog.md
-        run: |
-          if [ -f changelog.md ]; then
-            head -n 20 changelog.md > changelog.tmp
-            mv changelog.tmp changelog.md
-            git config --global user.name "GitHub Actions"
-            git config --global user.email "actions@github.com"
-            git add changelog.md
-            git commit -m "CI: Trim changelog.md" || echo "No changes to commit"
-            git push origin HEAD:${{ github.ref_name }} || echo "Push failed or nothing to push"
-          fi
-
-      - name: Validate files before sending
-        run: |
-          ls -la
-          cat version
-          if [ ! -f changelog.txt ]; then
-            echo "::error::changelog.txt not found!"
-            exit 1
-          fi
-          ls -la changelog.txt
-          if [ ! -s changelog.txt ]; then
-            echo "::error::changelog.txt is empty!"
-            exit 1
-          fi
 
       - name: Send Telegram notification
         run: |
-          TEXT="🚀 *Сборка #${{ steps.version.outputs.build_number }} успешна\!*\n\n"
-          TEXT+="🏷 *Версия:* \`${{ steps.version.outputs.version }}\`\n"
-          TEXT+="📅 *Дата:* $(date +'%Y-%m-%d %H:%M MSK')\n"
-          TEXT+="🔗 *Подробности:* ${{ github.repository }}\n\n"
+          TEXT="🚀 *Сборка #${GITHUB_RUN_NUMBER} успешна\!*%0A"
+          TEXT+="🏷 *Версия:* \`$(cat version)\`%0A"
+          TEXT+="📅 *Дата:* $(date +'%Y-%m-%d %H:%M MSK')%0A"
+          TEXT+="🔗 *Репозиторий:* ${GITHUB_REPOSITORY}%0A%0A"
           TEXT+="_Изменения во вложенном файле_ ↓"
 
-          MESSAGE_RESPONSE=$(curl -s -X POST \
+          curl -s -X POST \
             "https://api.telegram.org/bot${{ secrets.TELEGRAM_BOT_TOKEN }}/sendMessage" \
             -d chat_id="${{ secrets.TELEGRAM_CHAT_ID }}" \
-            -d parse_mode="Markdown" \
-            -d text="$TEXT")
+            -d parse_mode="MarkdownV2" \
+            -d text="$TEXT"
 
-          FILE_RESPONSE=$(curl -s -X POST \
+          curl -s -X POST \
             "https://api.telegram.org/bot${{ secrets.TELEGRAM_BOT_TOKEN }}/sendDocument" \
             -F chat_id="${{ secrets.TELEGRAM_CHAT_ID }}" \
-            -F document=@"${{ github.workspace }}/changelog.txt")
+            -F document=@changelog.txt
 
-          if [[ $(echo "$MESSAGE_RESPONSE" | jq -r '.ok') != 'true' ]]; then
-             echo "::error::Failed to send Telegram message"
-             exit 1
-          fi
-          if [[ $(echo "$FILE_RESPONSE" | jq -r '.ok') != 'true' ]]; then
-             echo "::error::Failed to send Telegram file"
-             exit 1
-          fi
-          echo "Telegram notification sent successfully!"
-
-      - name: Verify files were committed
-        if: always()
-        run: |
-          git status
-          cat version
-          git log -1
-          cat changelog.txt || echo "changelog.txt not found"
-
-  # Этап пятый - Docker Hub
   dockerhub_publish:
     runs-on: ubuntu-latest
     needs: build
@@ -319,7 +181,6 @@ jobs:
 
       - name: Read version
         id: ver
-        shell: bash
         run: |
           v=$(tr -d '\r\n ' < version); v=${v#v}
           echo "VERSION=$v" >> $GITHUB_OUTPUT
